k8s-yaml/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - demo.com
      secretName: demo-tls
  rules:
    - host: demo.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: simple-http-server
                port:
                  number: 80
